[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/ConversationEngine.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SearchAPI.tscn" type="PackedScene" id=2]

[node name="ConversationEngine" type="Node2D"]
script = ExtResource( 1 )

[node name="SearchAPI" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="on_search_request_completed" from="SearchAPI" to="." method="_on_SearchAPI_on_search_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
